--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <image src="514282889_122152578290522379_4840069716918021090_n-removebg-preview.png" alt="Logo" class="logo">
 </head>
 <body>
-    <h1>First Brew - Yambie Kohi</h1>
+    <h1>Sample Company</h1>
     <p>Built-In Point of Sale System v1.0.</p>
 <div class="button-group">
     <button id="myButton">Order</button>
