--- a/nextpage.html
+++ b/nextpage.html
@@ -8,7 +8,12 @@
 <body>
 <!-- This is the next page after clicking "Next Page" -->
 <h1>Hello There!</h1>
-<p>This is the next page of the web application.</p>
+<p>This was made for Developments only.</p>
+<p>Owned and Developed by John Patrick Fernandez</p>
+<p>
+    Visit me at <a href="https://github.com/JPfern20">GitHub</a> or <a href="www.linkedin.com/in/patfrnndz">LinkedIn</a> and <a href="https://www.facebook.com/14.john.fernandez.14">Facebook</a>.
+</p>
+
 <div class = "button-group"></div>
 <button id="backButton">Back to Home</button>
 <br>
