--- a/nextpage.html
+++ b/nextpage.html
@@ -11,10 +11,10 @@
 <p>This was made for Developments only.</p>
 <p>Owned and Developed by John Patrick Fernandez</p>
 <p>
-    Visit me at <a href="https://github.com/JPfern20">GitHub</a> or <a href="www.linkedin.com/in/patfrnndz">LinkedIn</a> and <a href="https://www.facebook.com/14.john.fernandez.14">Facebook</a>.
+    Visit me at <a href="https://github.com/JPfern20">GitHub</a> or <a href="https://www.linkedin.com/in/patfrnndz">LinkedIn</a> and <a href="https://www.facebook.com/14.john.fernandez.14">Facebook</a>.
 </p>
 
-<div class = "button-group"></div>
+<div class = "button-group">
 <button id="backButton">Back to Home</button>
 <br>
 <button id = "loginButton">Login</button>
