--- a/user.html
+++ b/user.html
@@ -17,7 +17,7 @@
         <br>
         <br>
         <div class="button-group">
-        <button type="submit">Submit</button>
+        <button type="submitButton">Submit</button>
         <br>
         <button id="backButton">Back to Home</button>
         </div>
