--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8" />
     <title>My Java Web</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <image src="Screenshot_2025-08-07_210312-removebg-preview.png" alt="Logo" class="logo">
 </head>
 <body>
+    <img src="Screenshot_2025-08-07_210312-removebg-preview.png" alt="Logo" class="logo">
     <h1>Sample Company</h1>
     <p>Built-In Point of Sale System v1.0.</p>
-<div class="button-group">
-    <button id="myButton">Order</button>
-    <button id="but1">View Status</button>
-    <button id="but2">Admin Login</button>
-</div>
+    <div class="button-group">
+        <button id="myButton">Order</button>
+        <button id="but1">View Status</button>
+        <button id="but2">Admin Login</button>
+    </div>
     <script src="script.js"></script>
-    
 </body>
 </html>
