--- a/user.html
+++ b/user.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -9,19 +9,18 @@
     <h2>Welcome to Login Page</h2>
     <p>Please Enter Your Credentials to Log In.</p>
     <form id="loginForm">
-        <label for ="username">Username: </label>
-        <input type ="text" id="username" name="username" required>
+        <label for="username">Username: </label>
+        <input type="text" id="username" name="username" required>
         <br>
         <label for="password">Password: </label>
         <input type="password" id="password" name="password" required>
         <br>
         <br>
         <div class="button-group">
-        <button id="submitButton">Submit</button>
-        <br>
-        <button id="backButton">Back to Home</button>
+            <button id="submitButton">Submit</button>
+            <br>
+            <button id="backButton">Back to Home</button>
         </div>
-        
     </form>
     <br>
     <p id="message"></p>
