--- a/nextpage.html
+++ b/nextpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Login Page</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -14,11 +14,11 @@
     Visit me at <a href="https://github.com/JPfern20">GitHub</a> or <a href="https://www.linkedin.com/in/patfrnndz">LinkedIn</a> and <a href="https://www.facebook.com/14.john.fernandez.14">Facebook</a>.
 </p>
 
-<div class = "button-group">
-<button id="backButton">Back to Home</button>
-<br>
-<button id = "loginButton">Login</button>
-<br>
+<div class="button-group">
+    <button id="backButton">Back to Home</button>
+    <br>
+    <button id="loginButton">Login</button>
+    <br>
 </div>
 <script src="script.js"></script>
 </body>
