--- a/user.html
+++ b/user.html
@@ -8,20 +8,36 @@
 <body>
     <h2>Welcome to Login Page</h2>
     <p>Please Enter Your Credentials to Log In.</p>
+    
     <form id="loginForm">
-        <label for="username">Username: </label>
+        <label for="username">User  Username: </label>
         <input type="text" id="username" name="username" required>
         <br>
-        <label for="password">Password:  </label>
+        <label for="password">User  Password:  </label>
         <input type="password" id="password" name="password" required>
         <br>
         <br>
         <div class="button-group">
-            <button id="submitButton">Submit</button>
+            <button type="submit" id="submitButton">User  Login</button>
             <br>
-            <button id="backButton">Back to Home</button>
+            <button id="backButton" type="button">Back to Home</button>
         </div>
     </form>
+
+    <h2>Admin Login</h2>
+    <form id="adminLoginForm">
+        <label for="adminUsername">Admin Username: </label>
+        <input type="text" id="adminUsername" name="adminUsername" required>
+        <br>
+        <label for="adminPassword">Admin Password:  </label>
+        <input type="password" id="adminPassword" name="adminPassword" required>
+        <br>
+        <br>
+        <div class="button-group">
+            <button type="submit" id="adminSubmitButton">Admin Login</button>
+        </div>
+    </form>
+    
     <br>
     <p id="message"></p>
     <script src="script.js"></script>
