--- a/orders.html
+++ b/orders.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Available Products</h1>
+    <h1>Available Orders</h1>
     <table border="1" cellpadding="10">
         <thead>
             <tr>
