--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Sample Company</h1>
     <p>Built-In Point of Sale System v1.0.</p>
     <div class="button-group">
-        <button id="myButton">Order</button>
+        <button id="myButton">View Products</button>
         <button id="but1">View Status</button>
         <button id="but2">Admin Login</button>
     </div>
