--- a/orders.html
+++ b/orders.html
@@ -16,7 +16,7 @@
                 <th>Order</th>
             </tr>
         </thead>
-        <tbody id="productList">
+        <tbody type="loadorders">
             <!-- Products will be loaded here via script.js -->
         </tbody>
     </table>
