--- a/user.html
+++ b/user.html
@@ -23,7 +23,9 @@
             <button id="backButton" type="button">Back to Home</button>
         </div>
     </form>
-
+    <br>
+    <p> - Or -</p>
+    <br
     <h2>Admin Login</h2>
     <form id="adminLoginForm">
         <label for="adminUsername">Admin Username: </label>
@@ -34,7 +36,8 @@
         <br>
         <br>
         <div class="button-group">
-            <button type="submit" id="adminSubmitButton">Admin Login</button>
+            <button type="submit" id="loginButton">Admin Login</button>
+            
         </div>
     </form>
     
