--- a/user.html
+++ b/user.html
@@ -43,7 +43,7 @@
         <button type="submit">Register</button>
     </form>
 
-    <p id="message"></p>
+    <p><em>Please Contact your Institution or Organization Administration if you wish to apply for <strong>Administrator</strong></em></p>
     <script src="script.js"></script>
 </body>
 </html>
