--- a/user.html
+++ b/user.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <title>Login & Registration</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        body {
+            text-align: center;
+        }
+        form {
+            display: inline-block;
+            text-align: left;
+            margin-bottom: 20px;
+        }
+        button {
+            display: block;
+            margin: 10px auto;
+        }
+    </style>
 </head>
 <body>
+    <h1><strong>User and Admin Login<Strong></h1>
     <h2>User Login</h2>
     <form id="loginForm">
         <label for="username">Username: </label>
@@ -42,8 +57,11 @@
         <br>
         <button type="submit">Register</button>
     </form>
+    <br><br>
+    <button id="backButton">Back to Home</button>
+    <br
+    <p><em>Please contact your Institution or Organization Administration if you wish to apply for <strong>Administrator</strong></em></p>
 
-    <p><em>Please Contact your Institution or Organization Administration if you wish to apply for <strong>Administrator</strong></em></p>
     <script src="script.js"></script>
 </body>
 </html>
