--- a/user.html
+++ b/user.html
@@ -20,7 +20,8 @@
     </style>
 </head>
 <body>
-    <h1><strong>User and Admin Login<Strong></h1>
+    <h1><strong>User and Admin Login</strong></h1>
+
     <h2>User Login</h2>
     <form id="loginForm">
         <label for="username">Username: </label>
@@ -57,9 +58,12 @@
         <br>
         <button type="submit">Register</button>
     </form>
+
+    <div id="message" style="color: red; margin-top: 10px;"></div>
+
     <br><br>
     <button id="backButton">Back to Home</button>
-    <br
+    <br>
     <p><em>Please contact your Institution or Organization Administration if you wish to apply for <strong>Administrator</strong></em></p>
 
     <script src="script.js"></script>
