--- a/user.html
+++ b/user.html
@@ -22,7 +22,7 @@
 <body>
     <h1><strong>User and Admin Login</strong></h1>
 
-    <h2>User Login</h2>
+    <h2>Customer Login</h2>
     <form id="loginForm">
         <label for="username">Username: </label>
         <input type="text" id="username" name="username" required>
