--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="button-group">
         <button id="but1">View Products</button>
         <button id="but2">View Status</button>
-        <button id="but2">Admin Login</button>
+        <button id="but2">Credits</button>
     </div>
     <script src="script.js"></script>
 </body>
