--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Built-In Point of Sale System v1.0.</p>
     <div class="button-group">
         <button id="but1">View Products</button>
-        <button id="but2">View Status</button>
+        <button id="loginButton">View Status</button>
         <button id="but2">Credits</button>
     </div>
     <script src="script.js"></script>
