--- a/products.html
+++ b/products.html
@@ -22,6 +22,8 @@
         </tbody>
     </table>
     <br>
+    <button onclick="showCart()">View Cart / Checkout</button>
+    <br>
     <button id="backButton">Back to Home</button>
     <script src="script.js"></script>
 </body>
