--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Java Web</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <img src="Screenshot_2025-08-07_210312-removebg-preview.png" alt="Logo" class="logo">
+    <img src="Screenshot_2025-08-07_210312-removebg-preview.png" alt="Sample Company Logo" class="logo" />
     <h1>Sample Company</h1>
     <p>Built-In Point of Sale System v1.0.</p>
     <div class="button-group">
-        <button id="but1">View Products</button>
-        <button id="loginButton">View Status</button>
-        <button id="but2">Credits</button>
+        <button id="but1" type="button">View Products</button>
+        <button id="loginButton" type="button">View Status</button>
+        <button id="but2" type="button">Credits</button>
     </div>
     <script src="script.js"></script>
 </body>
