--- a/products.html
+++ b/products.html
@@ -59,7 +59,7 @@
     <tfoot>
       <tr>
         <td colspan="3" style="text-align: right;"><strong>Total:</strong></td>
-        <td id="cartTotal">$0.00</td>
+        <td id="cartTotal">PHP0.00</td>
         <td></td>
       </tr>
     </tfoot>
