--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -12,14 +12,13 @@
 
   <section>
     <h2>Orders Summary</h2>
-    <table border="1" cellpadding="8" id="orderSummaryTable">
+    <table border="1" cellpadding="8" id="orderList"> <!-- Changed ID to orderList -->
       <thead>
         <tr>
           <th>Order ID</th>
           <th>Customer</th>
           <th>Products</th>
           <th>Status</th>
-          <th>Total Amount</th>
           <th>Order Date</th>
         </tr>
       </thead>
