User Logout Function

--- a/products.html
+++ b/products.html
@@ -69,6 +69,8 @@
   <button id="checkoutBtn" onclick="checkout()">Checkout</button>
 
   <br /><br />
+  <button id="logoutBtn">Logout</button>
+  <br>
   <button id="backButton">Back to Home</button>
 
   <script src="script.js"></script>
