--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -13,7 +13,7 @@
 
   <section>
     <h2>Orders Summary</h2>
-    <table border="1" cellpadding="8" id="orderSummaryTable tbody"> <!-- Changed ID to orderList -->
+    <table border="1" cellpadding="8" id="orderSummaryTable"> <!-- Corrected ID -->
       <thead>
         <tr>
           <th>Order ID</th>
@@ -23,7 +23,7 @@
           <th>Order Date</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody></tbody> <!-- This remains unchanged -->
     </table>
   </section>
 
