--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -20,6 +20,7 @@
           <th>Customer</th>
           <th>Products</th>
           <th>Status</th>
+          <th>Total Order Amount</th>
           <th>Order Date</th>
         </tr>
       </thead>
