--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -22,6 +22,7 @@
           <th>Status</th>
           <th>Total Order Amount</th>
           <th>Order Date</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody></tbody> <!-- This remains unchanged -->
