--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Built-In Point of Sale System v1.0.</p>
     <div class="button-group">
         <button id="but1" type="button">View Products</button>
-        <button id="loginButton" type="button">View Status</button>
+        <button id="nowServe" type="button">View Status</button>
         <button id="but2" type="button">Credits</button>
     </div>
     <script src="script.js"></script>
