--- a/now_serve.html
+++ b/now_serve.html
@@ -3,35 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Now Serving</title>
-    <style>
-        .queue-container {
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        #now-serving {
-            margin-bottom: 30px;
-        }
-        .serving-spotlight {
-            background: #f8f8f8;
-            padding: 15px;
-            margin-bottom: 15px;
-            border: 1px solid #ddd;
-            text-align: center;
-            font-weight: bold;
-        }
-        .queue-table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="queue-container">
