--- a/now_serve.html
+++ b/now_serve.html
@@ -43,7 +43,10 @@
             </table>
         </div>
     </div>
-
+    <br><br>
+    <button id="backButton">Back to Home</button>
+    <br>
+    <button id="but1">View Products</button>
     <script src="script.js"></script>
 </body>
 </html>
