--- a/now_serve.html
+++ b/now_serve.html
@@ -37,7 +37,7 @@
                         <th>Time Placed</th>
                     </tr>
                 </thead>
-                <tbody id="orderQueueTable">
+                <tbody id="pendingOrdersBody"> <!-- Updated ID to match JavaScript -->
                     <!-- Pending orders will be inserted here -->
                 </tbody>
             </table>
