--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -14,7 +14,7 @@
 
   <section>
     <h2>Orders Summary</h2>
-    <table border="1" cellpadding="8" id="orderSummaryTable"> <!-- Corrected ID -->
+    <table border="1" cellpadding="8" id="orderSummaryTable">
       <thead>
         <tr>
           <th>Order ID</th>
@@ -26,7 +26,7 @@
           <th>Actions</th>
         </tr>
       </thead>
-      <tbody></tbody> <!-- This remains unchanged -->
+      <tbody></tbody>
     </table>
   </section>
 
@@ -60,5 +60,11 @@
   </section>
 
   <script src="admin-dashboard.js"></script>
+  <script>
+    // Reload the page every 3 seconds
+    setInterval(function() {
+      location.reload();
+    }, 3000);
+  </script>
 </body>
 </html>
